...
    DifficultyDescending("Descending difficulty"),
    RetrievabilityAscending("Ascending retrievability"),
    RetrievabilityDescending("Descending retrievability"),
    RelativeOverdueness("Relative overdueness"),
    Random("Random"),
    Added("Order added"),
    LatestAddedFirst("Latest added first"),
}

@Serializable
enum class SchedulerAlgorithm {
    Fsrs5,
    Fsrs6,
...
